<resources>
    <string name="app_name">NUBIQ</string>
    <string name="user">Nombre de usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="idClient">ID Client:</string>
    <string name="textBtn">Login 2,3,0</string>
    <string name="login">Login</string>
    <string name="textLogin">Please type your account info here</string>
    <string name="textInput">Type your ID here</string>
    <string name="Presentacions">Presentaciones desactivadas</string>
    <string name="hintUser">Usuario</string>
    <string name="hintPassword">password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="nueva_visita">Nueva visita</string>
    <string name="clientes">Clientes</string>
    <string name="productos">Productos</string>
    <string name="cuadro_de_mando">Cuadro de mando</string>
    <string name="actividad_reciente">Actividad reciente</string>
    <string name="elementos_subir">X elementos por subir</string>
</resources>
