<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
          >
        <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_action_check"
                android:title="@string/nueva_visita"
                android:textColor="@color/blanco"
                android:background="@color/nubiq"
                />
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_action_client"
                android:title="@string/clientes"/>
        <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_action_products"
                android:title="@string/productos"/>
        <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_action_dashboard"
                android:title="@string/cuadro_de_mando"/>
        <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_action_recent"
                android:title="@string/actividad_reciente"/>
    </group>

</menu>
